--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,46 +1,28 @@
-/*
- * CSS for jsPsych experiments.
- *
- * This stylesheet provides minimal styling to make jsPsych
- * experiments look polished without any additional styles.
- */
+/* Some jsPsych styles */
+.jspsych-display-element {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
 
- @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+.jspsych-content-wrapper {
+  margin: auto;
+  width: 100%;
+}
 
-/* Container holding jsPsych content */
+.jspsych-content {
+  max-width: 95%; /* this is mainly an IE 10-11 fix */
+  text-align: center;
+  margin: auto; /* this is for overflowing content */
+}
 
- .jspsych-display-element {
-   display: flex;
-   flex-direction: column;
-   overflow-y: auto;
- }
+.jspsych-top {
+  align-items: flex-start;
+}
 
- .jspsych-display-element:focus {
-   outline: none;
- }
-
- .jspsych-content-wrapper {
-   display: flex;
-   margin: auto;
-   flex: 1 1 100%;
-   width: 100%;
- }
-
- .jspsych-content {
-   max-width: 95%; /* this is mainly an IE 10-11 fix */
-   text-align: center;
-   margin: auto; /* this is for overflowing content */
- }
-
- .jspsych-top {
-   align-items: flex-start;
- }
-
- .jspsych-middle {
-   align-items: center;
- }
-
-/* fonts and type */
+.jspsych-middle {
+  align-items: center;
+}
 
 .jspsych-display-element {
   font-family: 'Open Sans', 'Arial', sans-serif;
@@ -48,14 +30,11 @@
   line-height: 1.6em;
 }
 
-/* Form elements like input fields and buttons */
-
 .jspsych-display-element input[type="text"] {
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 14px;
 }
 
-/* borrowing Bootstrap style for btn elements, but combining styles a bit */
 .jspsych-btn {
   display: inline-block;
   padding: 6px 12px;
@@ -88,8 +67,6 @@
   cursor: not-allowed;
 }
 
-/* jsPsych progress bar */
-
 #jspsych-progressbar-container {
   color: #555;
   border-bottom: 1px solid #dedede;
@@ -100,10 +77,12 @@
   width: 100%;
   line-height: 1em;
 }
+
 #jspsych-progressbar-container span {
   font-size: 14px;
   padding-right: 14px;
 }
+
 #jspsych-progressbar-outer {
   background-color: #eee;
   width: 50%;
@@ -113,23 +92,19 @@
   vertical-align: middle;
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 }
+
 #jspsych-progressbar-inner {
   background-color: #aaa;
   width: 0%;
   height: 100%;
 }
 
-/* Control appearance of jsPsych.data.displayData() */
-#jspsych-data-display {
-  text-align: left;
-}
-
+/* Custom styling */
 html, body {
     height: 100%;
     background-color: grey;
     color: orange;
 }
-
 
 div {
     font-size: 50px;
