--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,3 +129,9 @@ svg {
   height: 100%;
   width: 100%;
 }
+
+/* Gorilla style overrides */
+h1, h2 {
+  font-weight: bold;
+  letter-spacing: normal;
+}
