--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,13 +27,13 @@
 }
 
 .jspsych-display-element {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 1.6em;
 }
 
 .jspsych-display-element input[type="text"] {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 14px;
 }
 
@@ -43,7 +43,7 @@
   margin: 0px;
   font-size: 14px;
   font-weight: 400;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   cursor: pointer;
   line-height: 1.4;
   text-align: center;
@@ -92,7 +92,7 @@
   height: 14px;
   display: inline-block;
   vertical-align: middle;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 #jspsych-progressbar-inner {
@@ -102,7 +102,8 @@
 }
 
 /* Custom styling */
-html, body {
+html,
+body {
   height: 100%;
   background-color: black;
   color: white;
@@ -110,7 +111,7 @@ html, body {
 
 div {
   line-height: normal;
-  font-family: 'Lucida Grande';
+  font-family: "Lucida Grande";
 }
 
 div.center {
@@ -131,7 +132,8 @@ svg {
 }
 
 /* Gorilla style overrides */
-h1, h2 {
+h1,
+h2 {
   font-weight: bold;
   letter-spacing: normal;
 }
